@@ -1,1 +1,0 @@
-DIST samri-0.4.1.tar.gz 4115417 SHA256 aacf7f02d7d7adb46b31aeb85bf85abbe3c28d9f4aa92d2149114fb0416fdd04 SHA512 c2eef33e725d0d5b87f30ce8da51d9c46ce735a8d82e41f93eba8d225b58eead4777441db4be9078e7f29b3f92d12525d729dddea888fd7e9a66ba5e607d8caf WHIRLPOOL 6ca655dd4b28dc1f194bf40fc830645c179cad67d3f85deffd6251a0cc9054e936372566caae1daa608025eec6fc0e892fc8e1d2b62c3491ea71c1581d21a1e9
