@@ -1,3 +1,7 @@
+  08 Dec 2019;  <chymera@gentoo.org> -Manifest, -samri-0.4.1.ebuild:
+  sci-biology/samri: migrated version to Gentoo Science  https://gitweb.gentoo.o
+  rg/proj/sci.git/commit/?id=e68c1eb1aea94ee2860d3b9feb079932114904ea
+
 *samri-0.4.1 (08 Dec 2019)
 
   08 Dec 2019;  <chymera@gentoo.org> +samri-0.4.1.ebuild, -samri-0.4.ebuild:
